<resources>
    <string name="app_name">Buddy-Kart-Store</string>
    <string name="Logintxt">Login to your Account</string>
    <string name="back">Back</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in">Sign in</string>
    <string name="default_web_client_id">default_web-client</string>
    <string name="term_and_condition">I agree to the Terms and Conditions</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="product_details">Product Details</string>
    <string name="cart">Cart\n</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="delete">Delete\n</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_new_delivery_address">Add New Delivery Address</string>
    <string name="login">Login</string>
    <string name="banner">Banner</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="company">Company</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="state_zone">State / Zone</string>
    <string name="save_address">Save Address</string>
    <string name="addaddress">Add Address</string>
    <string name="category">Category</string>
    <string name="search">search</string>
    <string name="related_image">reltaed image\n</string>
    <string name="apply">Apply</string>
</resources>