<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="280dp"
        android:layout_height="132dp"
        android:layout_marginTop="102dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/banner"
            android:src="@drawable/buddycart"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/Logintxt"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:hint="@string/enter_email"
        app:boxBackgroundColor="@color/secondaryWhite"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/primaryYellow"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/textBlack"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        app:boxBackgroundColor="@color/secondaryWhite"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/primaryYellow"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/name_container"
        app:layout_constraintStart_toStartOf="@id/name_container"
        app:layout_constraintTop_toBottomOf="@id/name_container"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            app:endIconMode="password_toggle"

            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/textBlack"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signinbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/primaryYellow"
        android:textAlignment="center"
        android:text="@string/login"
        android:textSize="12sp"
        android:textColor="@color/secondaryBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/password_container"
        app:layout_constraintStart_toStartOf="@id/password_container"
        app:layout_constraintTop_toBottomOf="@id/password_container" />

    <TextView

        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/primaryYellow"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/signinbtn"
        app:layout_constraintEnd_toEndOf="@+id/signinbtn"
        app:layout_constraintTop_toBottomOf="@+id/signinbtn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/txt"
        app:layout_constraintStart_toStartOf="@+id/txt"
        app:layout_constraintTop_toBottomOf="@id/txt">

        <!-- Normal text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/primaryYellow"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        />


    <LinearLayout
        android:id="@+id/social_login_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or"
        tools:ignore="MissingConstraints">

        <!-- Google Circular Button -->

        <com.google.android.material.imageview.ShapeableImageView

            android:id="@+id/btn_google"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/google"
            android:layout_marginEnd="60dp"
            app:shapeAppearanceOverlay="@style/CircleImageStyle" />

        <!-- Facebook Circular Button -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_facebook"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/facebookBlue"
            android:src="@drawable/facebook"
            app:shapeAppearanceOverlay="@style/CircleImageStyle" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primaryYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
